@@ -1,4 +1,5 @@
 Changes towards version 0.2:
+- Fixed a potential semaphore race when suspending clock -PhracturedBlue
 - Function name conflict fixes for Mac OSX -by peterb
 - Minor fixes for pc-fonts (Outfit screen, gradient color swap) -by Nic
 - DCQ is now accessed uniformly by routines in gfx_common.c
